# demo-rust-api

./: Cargo.toml  README.md  auto-deploy.sh  phone-mask.service  settings.conf.sample
migrations/: 0001_country_table.sql
sh_hell/: README.md  country_data.sql  country_exeption_data.sql  country_to_upper.sh  country_translater.sh  output_file.txt  output_file_2.txt  read_file.sh
src/: endpoints.rs  main.rs
src/tool/: api_result.rs
