[package]
name = "gwp_phone_mask"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json", "uuid"  ] }
tokio = { version = "1.5", features = ["full"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
log4rs = "1.2.0"
log = "0.4.19"
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
url = "2.4.0"
phonenumber = "0.3.2"
reqwest = "0.11.18"
